# pirover_navigation

./: .rosinstall  CMakeLists.txt  README.md  package.xml
config/: costmap_common_params.yaml
description/: robot.urdf
firmware/: CMakeLists.txt
firmware/speed_control/: speed_control.ino
firmware/speed_control/libraries/PID_v1/: PID_v1.cpp  PID_v1.h
launch/: autonomous.launch  differential_drive.launch  gmapping.launch  localization.launch  mapping.launch  move_base.launch  sensors.launch  teleop.launch
viz/: neato_lidar.rviz
