<?xml version="1.0"?>
<package>
  <name>pirover</name>
  <version>0.0.1</version>
  <description>The pirover package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="babraham42@gmail.com">Bereket Abraham</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <url type="website">https://github.com/babraham123/pirover_navigation</url>


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>amcl</build_depend>
  <build_depend>differential_drive</build_depend>
  <build_depend>global-planner</build_depend>
  <build_depend>gmapping</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>local-planner</build_depend>
  <build_depend>map-server</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>raspicam_node</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_client</build_depend>
  <build_depend>rotate-recovery</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>system-monitor</build_depend>
  <build_depend>teleop-twist-keyboard</build_depend>
  <build_depend>xv_11_laser_driver</build_depend>
  <run_depend>amcl</run_depend>
  <run_depend>differential_drive</run_depend>
  <run_depend>global-planner</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>local-planner</run_depend>
  <run_depend>map-server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>raspicam_node</run_depend>
  <run_depend>rosserial_arduino</run_depend>
  <run_depend>rosserial_client</run_depend>
  <run_depend>rotate-recovery</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>system-monitor</run_depend>
  <run_depend>teleop-twist-keyboard</run_depend>
  <run_depend>xv_11_laser_driver</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
